--- a/ActivityTest/res/layout/second_layout.xml
+++ b/ActivityTest/res/layout/second_layout.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-<Button 
-    android:id="@+id/button_1"
-     android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:text="Button_1"
-    />
+  <Button
+      android:id="@+id/button_2"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Buttton 2"
+      />
 
 </LinearLayout>
