--- a/UILayoutTest/res/layout/activity_main.xml
+++ b/UILayoutTest/res/layout/activity_main.xml
@@ -1,11 +1,36 @@
-
+<TableLayout xmlns:android="http://schemas.android.con/apk/res/android"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+    >
+    <TableRow >
+        <TextView
+            android:layout_height="wrap_content"
+            android:text="Account"
+        />
+        <EditText 
+            android:id="@+id/account"
+            android:layout_height="wrap_content"
+            android:hint="Input your account"
+            />"
+    </TableRow>
+    <TableRow >
+        <TextView 
+            android:layout_height="wrap_content"
+            android:text="Password"
+            />
+        <EditText 
+            android:id="@+id/password"
+            android:layout_height="wrap_content"
+            android:hint="Input your password"
+            />"
+    </TableRow>
 <!--<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
     
   
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">"
 
-    />"
+    >"
   <Button 
     android:id="@+id/button3"
     android:layout_width="wrap_content"
@@ -53,3 +78,4 @@
         />"
     
 </RelativeLayout>-->
+</TableLayout>
