--- a/BroadcastBestPractice/res/layout/login.xml
+++ b/BroadcastBestPractice/res/layout/login.xml
@@ -1,7 +1,9 @@
-<TableLayout xmlns:android="http://schemas.android.con/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-    >
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+   
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:stretchColumns="1" >
+
     <TableRow >
         <TextView
             android:layout_height="wrap_content"
